Add youtube playlist to adapters page

--- a/adaptors/intro.mdx
+++ b/adaptors/intro.mdx
@@ -44,6 +44,12 @@ adaptors is as follows:
 
 In short, _most_ adaptors follow the naming convention `@openfn/language-xyz`.
 
+## Learn More About Adaptors
+
+Explore this YouTube playlist to gain a deeper understanding of OpenFn adaptors.
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=mnfXiLEM83eUzADd&amp;list=PL1pD3-abjHJ1cSQAoMd_ODCU_AauvyZeL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
 ## Adaptors vs. Workflows
 
 Adaptors are reusable components that make connecting with a specific app
