feat: change wiki docs link
Signed-off-by: Hunter Achieng <achienghunter@gmail.com>

--- a/adaptors/intro.mdx
+++ b/adaptors/intro.mdx
@@ -168,7 +168,7 @@ Or build your own (see below)!
 
 ## Building and extending adaptors
 
-See the [Github Adaptors wiki](https://github.com/OpenFn/adaptors/wiki) for the
+See the [Github Adaptors wiki](https://github.com/OpenFn/adaptors/blob/main/wiki/index.md) for the
 technical guide to developing adaptors.
 
 Adaptors' source code and technical documentation for developing or extending
